--- a/ecmc-biz/src/main/resources/template/email/register.html
+++ b/ecmc-biz/src/main/resources/template/email/register.html
@@ -51,7 +51,7 @@
 
 
                         <div style="line-height: 20px; margin-bottom: 10px; font-size: 12px;">
-                            感谢您使用LSP仲裁者军团管理系统<span style="color: #ff764c;">hd-eve.com</span>！
+                            感谢您使用LSP军团管理系统<span style="color: #ff764c;">hd-eve.com</span>！
                             本邮件由系统自动发出，请勿回复。
                         </div>
                         <div style="line-height: 20px; margin-bottom: 10px; font-size: 12px;">祝您的朋友（们）飞行安全！
@@ -64,7 +64,7 @@
                             <tbody><tr>
                                 <td></td>
                                 <td width="200" style="text-align: center; height: 24px; font-size: 12px;">
-                                    <img src="http://mobile.12306.cn/weixin/resources/weixin/images/mail/mail_logo.jpg" width="20" height="20" style="vertical-align: bottom; margin-right: 10px;">LSP仲裁者服务中心
+                                    <img src="http://mobile.12306.cn/weixin/resources/weixin/images/mail/mail_logo.jpg" width="20" height="20" style="vertical-align: bottom; margin-right: 10px;">LSP服务中心
                                 </td>
                             </tr>
                             <tr>
