fix fleet id null bug

--- a/ecmc-biz/src/main/resources/template/email/register.html
+++ b/ecmc-biz/src/main/resources/template/email/register.html
@@ -51,7 +51,7 @@
 
 
                         <div style="line-height: 20px; margin-bottom: 10px; font-size: 12px;">
-                            感谢您使用LSP军团管理系统<span style="color: #ff764c;">hd-eve.com</span>！
+                            感谢您使用LSP军团管理系统<span style="color: #ff764c;">http://www.mist-forever.com/</span>！
                             本邮件由系统自动发出，请勿回复。
                         </div>
                         <div style="line-height: 20px; margin-bottom: 10px; font-size: 12px;">祝您的朋友（们）飞行安全！
